<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/user_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:foregroundTint="@android:color/white"
        app:theme="@style/ToolbarTheme"
        app:titleTextColor="@android:color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_small"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/user_welcome"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_big" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_tiny"
        android:layout_marginEnd="@dimen/spacing_small"
        android:text="@string/user_welcome_subtitle"
        android:textColor="@android:color/black" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_textinputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_small"
        android:textColorHint="@color/colorPrimaryDark"
        app:boxStrokeColor="@color/colorPrimaryDark">

        <EditText
            android:id="@+id/user_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:hint="@string/user_type_email"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/user_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_small"
        android:focusable="false"
        android:textSize="@dimen/text_size_tiny"
        tools:text="@string/user_accept_conditions" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/user_errormsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/user_next"
            android:layout_margin="@dimen/spacing_small"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            tools:text="Mensaje de error" />

        <ProgressBar
            android:id="@+id/user_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/spacing_small" />

        <Button
            android:id="@+id/user_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/spacing_small"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:padding="@dimen/spacing_small"
            android:text="@string/user_go_on"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_normal" />
    </RelativeLayout>
</LinearLayout>