<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/user_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:foregroundTint="@android:color/white"
        app:theme="@style/ToolbarTheme"
        app:titleTextColor="@android:color/white" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_textinputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_toolbar"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_small"
        android:textColorHint="@color/colorPrimaryDark"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:hintEnabled="true">

        <EditText
            android:id="@+id/user_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_type_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/user_forgotten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_small"
        android:focusable="false"
        android:text="@string/user_forgotten_password"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_tiny" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/user_errormsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/user_enter"
            android:layout_margin="@dimen/spacing_small"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/incorrect_password"
            android:textColor="@color/colorPrimaryDark" />

        <ProgressBar
            android:id="@+id/user_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/spacing_small" />

        <Button
            android:id="@+id/user_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/spacing_small"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:padding="@dimen/spacing_small"
            android:text="@string/user_enter"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_normal" />
    </RelativeLayout>
</LinearLayout>